# tomat

./: OVERVIEW.md  README.md  pyproject.toml  tomat
.dvc/: config
.github/workflows/: ci.yml  deploy.yml  smoke-modal.yml
configs/: density-fp16.json  fp16-channels.json
data/: eval_mat_ids.json
data/tokenized/: val-smoke.dvc
docs/: 2026-04-30-overview-snapshot.md  2026-05-04-1B-cont-postmortem.md  ball-math.md  codec-analysis.md  datasets.md  discussion-notes.md  experiment-matrix.md  lmq-vs-equal-mass.md  marin-incidents.md
experiments/: tomat_patch_30m.py
marin/: eval_mat_nmae.py  eval_nmae.py  pyproject.toml  qwen3_density.py  train_tomat_tpu.py
oa-react-slides/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
oa-react-slides/src/: index.ts  vite-env.d.ts
oa-react-slides/src/components/: Icon.tsx
oa-react-slides/src/icons/: cloud  index.html
oa-react-slides/src/layouts/: Cover.module.css  Cover.tsx  Default.tsx  Section.module.css  Section.tsx
oa-react-slides/src/styles/: base.css  index.ts
results/: .gitignore  smoke.dvc  sweep-n50.csv  sweep-n50.csv.dvc
results/plots/: .gitignore  mass-captured-cutoff.png.dvc  nmae-by-category.png.dvc  nmae-vs-fraction.png.dvc
scripts/: analyze_preamble.py  analyze_voxel_coverage.py  backfill_eval_to_wandb.py  bootstrap_eval_noise.py  build_mpdb.py  fidelity_sweep.py  fidelity_sweep_modal.py  fit_density_codec.py  fit_lmq_codec_modal.py  fix_modal_volume_layout.py  log_nmae_to_wandb.py  make_scaling_plot_png.py  plot_ball_voxels.py  plot_lmq_distributions.py  plot_nmae_nemd_trajectory.py  plot_patch_tokenization.py  plot_preamble_dist.py  plot_sweep.py  publish_mpdb.py  pull_grid_shapes.py  pull_grid_shapes_modal.py  pull_preamble_stats_modal.py  pull_wandb_runs.py  sample_disjoint_eval_mats.py  sampling_distribution_preview.py  show_tokens.py  summarize_sweep.py  sweep_preprocess.py  sync_parquets_modal.py  sync_parquets_to_gcs.py  sync_run_to_r2.py  tokenize_patches.py  tokenize_patches_modal.py  train_smoke_modal.py  upload_zarrs_to_gcs.py  verify_modal_volume.py  verify_val_full_parquet.py
site/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
site/public/: 404.html  CNAME  example-tokens.txt  mats-md.csv  nmae-nemd-trajectories.json  runs-summary.csv  smoke-loss.csv  sweep-n50.csv
site/public/run-histories/: train-full-tpu16-1B-bs128-val-bf16-seed42.csv  train-full-tpu16-30M-bs512-seed42.csv  train-full-tpu8-200M-bs128-val-bf16-seed42.csv  train-full-tpu8-bs256-seed42.csv  val-full-5k-bs128-8gpu-bs128-seed42.csv  val-full-5k-bs32-2gpu-bs32-seed42.csv  val-full-5k-bs32-bs32-seed42.csv  val-full-5k-bs64-4gpu-bs64-seed42.csv  val-full-tpu-bs128-seed42.csv
site/scripts/: snapshot-deck.mjs
site/snapshots/: .gitignore
site/src/: App.tsx  DeckPage.tsx  FractionPlot.tsx  HomePage.tsx  MatsMetadataPlots.tsx  ParetoPlot.tsx  ScalingLossPlot.tsx  SmokeLossPlot.tsx  TrajectoryPlot.tsx  main.css  slides.tsx  theme.tsx  types.ts  useHash.ts  useSweep.ts
site/src/runs/: RunsPage.tsx  WallclockPlot.tsx  api.ts  parquet.ts
specs/: 00-project-context.md  01-tokenization-strategies.md  02-fidelity-sweep.md  04-patch-training.md  05-modal-smoke.md  06-oa-react-slides.md  07-full-train-scale.md  08-della-seed-train-split.md  10-ball-patches.md  11-per-mat-validation.md  12-tokenize-to-gcs.md  13-ablation-runbook.md  15-ball-voxel-viz.md  16-mpdb.md  18-lmq-codec.md  21-eval-noise-and-extended-runs.md  22-wandb-workspace-layouting.md  inference-cli.md
specs/done/: 03-modal-seed.md  08-della-seed-train-split.md  09-dvx-track-val-full.md  10-ball-patches.md  14-patch-tokenization-viz.md  17-density-loss-design.md  19-lmq-session-20260423.md  20-session-20260428-emd-do-8k.md
src/tomat/: __init__.py  float_codec.py  pads.py  promolecule.py  sweep.py  token_count.py
src/tomat/data/: mp.py  zarr_io.py
src/tomat/tokenizers/: __init__.py  ball.py  base.py  cutoff.py  delta.py  direct.py  direct_coded.py  downsampled.py  fourier.py  fourier_coded.py  patch.py  patch_v3.py
src/tomat/training/: sweep.py
src/tomato/: __init__.py  pads.py
src/tomato/data/: classify.py
src/tomato/tokenizers/: __init__.py  base.py  cutoff.py  delta.py  direct.py  fourier.py
tests/: test_float_codec.py  test_patch.py  test_patch_v3.py  test_sweep.py  test_tokenizers.py  test_zarr_io.py
worker/: package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
worker/src/: index.ts
