[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tomat"
version = "0.1.0"
description = "Tokenized Materials: LLM analogue of electrAI — predict DFT electron density for periodic crystals via a sequence model."
requires-python = ">=3.11,<3.13"
dependencies = [
    "click",
    "dvx",
    "matplotlib",
    "numpy",
    "pyarrow>=15",
    "pymatgen",
    "zarr>=3.0",
]

# The marin stack isn't on PyPI — marin-experiments/tiny-tpu ships a local
# ./vendor/ wheel index populated via `uv build` from a marin checkout. Those
# deps (marin, marin-levanter, marin-iris, marin-zephyr, marin-rigging, and
# jax[tpu]/torch/torchvision pins) are deferred to PR 2 (training), when
# we'll either vendor the wheels here or switch to git sources, mirroring
# tiny-tpu's setup.

[dependency-groups]
dev = [
    "mdcmd",
    "pytest",
    "pytest-xdist",
]

[tool.uv]
fork-strategy = "fewest"

# The blocks below are deferred to PR 2 (when we add the marin deps).
# They come from marin-experiments/tiny-tpu; resurrect when marin lands.
# override-dependencies = [
#     "omegaconf>=2.4.0.dev4",
#     "antlr4-python3-runtime==4.11",
#     "python-multipart>=0.0.22",
#     "wheel>=0.46.2",
#     "datasets>=3.1.0,<4.0.0",
#     "equinox>=0.11.10",
# ]
# find-links = [
#     "https://github.com/marin-community/marin/releases/expanded_assets/dupekit-0.1.0-40ac799",
#     "https://github.com/marin-community/kitoken/releases/expanded_assets/kitoken-0.10.2-a3012f4",
# ]
#
# [[tool.uv.index]]
# name = "marin-resiliparse"
# url = "https://marin-community.github.io/chatnoir-resiliparse/simple"
#
# [tool.uv.sources]
# resiliparse = { index = "marin-resiliparse" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tomat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
