[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tomat-marin"
version = "0.1.0"
description = "Marin + TPU launch path for tomat's patch-tokenized density LM."
requires-python = ">=3.11,<3.13"
dependencies = [
    "marin",
    "marin-levanter",
    "marin-iris",
    "marin-zephyr",
    "marin-rigging",
    "fsspec",
    "gcsfs",
    # eval_mat_nmae.py needs Zarr to read raw densities + pymatgen for structure parsing.
    "zarr>=3",
    "pymatgen",
    # Always-install jax[tpu] on linux. Proper fix would be to mirror
    # tiny-stories' `dispatch_grug_training_run` pattern (coordinator → TPU
    # worker with --extra tpu), but for a direct `iris job run` this keeps
    # libtpu.so available on the entrypoint task.
    "jax[tpu]==0.8.0 ; sys_platform == 'linux'",
]

# Iris's remote worker runs `uv sync --all-packages --no-group dev`, which
# errors if the dev group doesn't exist. Define an empty one so --no-group
# has a group to exclude.
[project.optional-dependencies]
# Platform-gated: `jax[tpu]` has no darwin wheels, so the markers let `uv
# lock` resolve on macOS (skips them entirely) while linux TPU workers
# still get the full set via `uv sync --extra tpu`.
tpu = [
    "jax[tpu]==0.8.0 ; sys_platform == 'linux'",
    "torch==2.9.0 ; sys_platform == 'linux'",
    "torchvision==0.24.0 ; sys_platform == 'linux'",
]

[dependency-groups]
dev = []

[tool.uv]
fork-strategy = "fewest"
prerelease = "allow"
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
# Mirrored from submodules/marin/pyproject.toml; omitting these makes uv
# resolution fail in the same way it does for marin itself.
override-dependencies = [
    "omegaconf>=2.4.0.dev4",
    "antlr4-python3-runtime==4.11",
    "python-multipart>=0.0.22",
    "wheel>=0.46.2",
    "datasets>=3.1.0,<4.0.0",
    "equinox>=0.11.10",
]

find-links = [
    # marin-* moved to git+SHA pins below (in [tool.uv.sources]) since the
    # daily-rotated wheel registries are flaky (GH 502s) and the dev
    # wheels can transiently 404 (yesterday's wheel deleted, today's not
    # published). Keep only the non-marin custom indices.
    "https://github.com/marin-community/marin/releases/expanded_assets/dupekit-0.1.0-40ac799",
    "https://github.com/marin-community/kitoken/releases/expanded_assets/kitoken-0.10.2-a3012f4",
]

# marin depends on resiliparse>=0.17.2 which only exists on this custom index.
# Mirrored from submodules/marin/lib/marin/pyproject.toml. Without it, uv
# resolves resiliparse from PyPI which caps at 0.16.0 and resolution fails.
[[tool.uv.index]]
name = "marin-resiliparse"
url = "https://marin-community.github.io/chatnoir-resiliparse/simple"

[tool.uv.sources]
resiliparse = { index = "marin-resiliparse" }
# Pin marin-* to a pre-finelog SHA: the 20260429 dev wheels declare a dep on
# `marin-finelog` but no marin-finelog-latest release has been published, so
# `uv lock` against the find-links registries fails. The 20260428 wheels are
# also unreachable (rotated out of marin-*-latest). Pin until upstream is
# healthy again.
marin           = { git = "https://github.com/marin-community/marin", rev = "117de4f18f1ca2b180f93a218d6eb92c517ed88c", subdirectory = "lib/marin" }
marin-haliax    = { git = "https://github.com/marin-community/marin", rev = "117de4f18f1ca2b180f93a218d6eb92c517ed88c", subdirectory = "lib/haliax" }
marin-levanter  = { git = "https://github.com/marin-community/marin", rev = "117de4f18f1ca2b180f93a218d6eb92c517ed88c", subdirectory = "lib/levanter" }
marin-iris      = { git = "https://github.com/marin-community/marin", rev = "117de4f18f1ca2b180f93a218d6eb92c517ed88c", subdirectory = "lib/iris" }
marin-zephyr    = { git = "https://github.com/marin-community/marin", rev = "117de4f18f1ca2b180f93a218d6eb92c517ed88c", subdirectory = "lib/zephyr" }
marin-rigging   = { git = "https://github.com/marin-community/marin", rev = "117de4f18f1ca2b180f93a218d6eb92c517ed88c", subdirectory = "lib/rigging" }
marin-fray      = { git = "https://github.com/marin-community/marin", rev = "117de4f18f1ca2b180f93a218d6eb92c517ed88c", subdirectory = "lib/fray" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
